--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Hello World</title>
 </head>
 <body>
-    <h1>Hello World from Azure Static Web App!</h1>
+    <h1>Updated Hello World from Azure Static Web App!</h1>
 </body>
 </html>
