--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>Hello World</title>
 </head>
 <body>
-    <h1>Updated Hello World from Azure Static Web App!</h1>
+    <h1 id="message">Hello World from Azure Static Web App!</h1>
+    <script src="./main.js"></script>
 </body>
 </html>
